--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "project1-zhmurov-nikolai-m25-555"
 version = "0.1.0"
 description = "A text-based adventure game where you explore an ancient labyrinth full of treasures and puzzles"
-authors = ["Nikolai Zhmurov <nikolayzhmurov88@gmail.com"]
+authors = ["Nikolai Zhmurov <nikolayzhmurov88@gmail.com>"]
 #readme = "README.md"
 packages = [
     { include = "labyrinth_game" },
